# fresaros

./: CMakeLists.txt
data/: global.lua
data/dungeons/: underworld-spawn.xml  underworld.otbm
data/events/: events.xml
data/events/scripts/: dungeon.lua  monster.lua  party.lua  player.lua
data/globalevents/: globalevents.xml
data/globalevents/scripts/: autospawn.lua
data/lib/core/: storages.lua
data/migrations/: 30.lua  31.lua
data/monster/: monsters.xml
data/monster/lua/: electric_wisp.lua
data/monster/monsters/: electric_wisp.xml
data/scripts/: HuntingTasks.lua  inspect.lua  item_tooltips.lua
data/scripts/crafting/: 1_crafting.lua  armorsmith.lua  weaponsmith.lua
data/scripts/creaturescripts/: electric_wisp_think.lua  monster_intelligence.lua
data/scripts/dungeons/: challenges.lua  dungeons.lua
data/scripts/dungeons/registers/: 0_underworld.lua
data/scripts/eventcallbacks/monster/: default_onDropLoot.lua
data/spells/: spells.xml
data/spells/scripts/attack/: electric_burst.lua
data/talkactions/scripts/: reload.lua
src/: CMakeLists.txt  combat.cpp  const.h  dungeon.cpp  dungeon.h  enums.h  events.cpp  game.cpp  game.h  iologindata.cpp  iomap.cpp  iomap.h  item.cpp  item.h  luascript.cpp  luascript.h  map.cpp  map.h  monster.h  monsters.cpp  networkmessage.cpp  npc.cpp  player.cpp  player.h  position.h  protocolgame.cpp  signals.cpp  tools.cpp  tools.h
tests/: CMakeLists.txt  position_test.cpp
vc17/: theforgottenserver.vcxproj
